--- a/app/index.html
+++ b/app/index.html
@@ -20,6 +20,7 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/tipr-final.js"></script>
+    <script src="https://checkout.stripe.com/checkout.js"></script>
 
     {{content-for 'body-footer'}}
   </body>
