--- a/app/index.html
+++ b/app/index.html
@@ -20,8 +20,13 @@
 
     <script src="assets/vendor.js"></script>
     <script src="assets/tipr-final.js"></script>
-    <script src="https://checkout.stripe.com/checkout.js"></script>
-
+    <script src="https://js.braintreegateway.com/v2/braintree.js"></script>
+    <script type="text/javascript" src="https://js.stripe.com/v2/"></script>
+    <script type="text/javascript">
+    // This identifies your website in the createToken call below
+    Stripe.setPublishableKey('pk_test_rZElzrV3eXXSjJM5fqXVxUzF');
+    // ...
+    </script>
     {{content-for 'body-footer'}}
   </body>
 </html>
